7197666: java -d64 -version core dumps in a box with lots of memory

Allow task queues to be mmapped instead of malloced on Solaris

Reviewed-by: coleenp, jmasa, johnc, tschatzl